
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char i8 ;
typedef size_t i32 ;


 int printf (char*,char*) ;

void syntax(){
             i8 *help[]={"\torder of arguments: -h,-p,-o",
                "\t-h hostname",
                         "\t-p port(default 8080)",
       "\t-o option(get/flood)"
                };
                i32 i;
                size_t com=sizeof help / sizeof help[0];
                for(i=0;i<com;i++){
                   printf("%s\n",help[i]);
               }
    }
