; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_13888.c_syntax.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_13888.c_syntax.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [30 x i8] c"\09order of arguments: -h,-p,-o\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"\09-h hostname\00", align 1
@.str.2 = private unnamed_addr constant [23 x i8] c"\09-p port(default 8080)\00", align 1
@.str.3 = private unnamed_addr constant [22 x i8] c"\09-o option(get/flood)\00", align 1
@__const.syntax.help = private unnamed_addr constant [4 x i8*] [i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.3, i32 0, i32 0)], align 16
@.str.4 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @syntax() #0 {
  %1 = alloca [4 x i8*], align 16
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = bitcast [4 x i8*]* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %4, i8* align 16 bitcast ([4 x i8*]* @__const.syntax.help to i8*), i64 32, i1 false)
  store i64 4, i64* %3, align 8
  store i64 0, i64* %2, align 8
  br label %5

5:                                                ; preds = %14, %0
  %6 = load i64, i64* %2, align 8
  %7 = load i64, i64* %3, align 8
  %8 = icmp ult i64 %6, %7
  br i1 %8, label %9, label %17

9:                                                ; preds = %5
  %10 = load i64, i64* %2, align 8
  %11 = getelementptr inbounds [4 x i8*], [4 x i8*]* %1, i64 0, i64 %10
  %12 = load i8*, i8** %11, align 8
  %13 = call i32 @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0), i8* %12)
  br label %14

14:                                               ; preds = %9
  %15 = load i64, i64* %2, align 8
  %16 = add i64 %15, 1
  store i64 %16, i64* %2, align 8
  br label %5

17:                                               ; preds = %5
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @printf(i8*, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
